syntax = "proto3";
option go_package = "/protos/list";
service List {
    rpc GetList(GetListRequest) returns (GetListResponse);
    rpc PatchList(PatchListRequest) returns (SetHeadResponse);
    rpc InsertList(InsertListRequest) returns (SetHeadResponse);
}

message GetListRequest {
    uint32 ListId = 1;
    uint32 UserId = 2;
}

message GetListResponse {
    uint32 ListId = 1;
    uint32 UserId = 2;
    uint32 HeadId = 3;
}

message PatchListRequest {
	uint32 ListId = 1;
	uint32 UserId = 2;
	uint32 HeadId = 3;
}

message InsertListRequest {
	uint32 ListId = 1;
	uint32 UserId = 2;
	uint32 HeadId = 3;
}

message SetHeadResponse {
    bool IsSuccess = 1;
}